--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "seed": "ts-node-dev src/seeds/admin.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
